--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-hello!! world
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Charm:wght@400;700&family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Tangerine:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Document</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+		<div class="postcard">
+			<div class="postcard-header">
+				<h1>My postcard</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+					alt="logotipo"
+				/>
+			</div>
+			<div class="postcard-body">
+				<div class="body-left">
+					Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4 Geeks Academy Course<br />
+					This is so cool wait to starting doing more stuff!
+				</div>
+				<div class="body-right">
+					<input type="text" id="nombre" placeholder="Some name" />
+					<input type="text" id="mail" placeholder="Some mail" />
+					<input type="text" id="comment" placeholder="Some comment" />
+				</div>
+			</div>
+			<div class="postcard-footer">
+				<button>Send my postcard</button>
+			</div>
+		</div>
+	</body>
+</html>
